--- a/assets/css/base/reset.css
+++ b/assets/css/base/reset.css
@@ -6,7 +6,7 @@ html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "inter", sans-serif;
+  font-family: "poppins", sans-serif;
 }
 
 a {
