--- a/assets/css/layouts/dashboard.css
+++ b/assets/css/layouts/dashboard.css
@@ -17,23 +17,33 @@ section.sidebar .container {
   flex-direction: column;
 }
 section.sidebar .container .logo {
-  height: 48px;
+  text-transform: uppercase;
+  font-size: 2.4rem;
+  font-weight: 900;
+  color: #2e2e2e;
+}
+section.sidebar .container .logo span {
+  color: #1baf76;
+  font-weight: 300;
 }
 section.sidebar .container a.add {
   font-size: 1.6rem;
   font-weight: 500;
-  color: #fff;
-  background-color: #1baf76;
+  color: #9294aa;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   text-align: center;
   padding: 1.6rem;
   border-radius: 1rem;
   margin: 5rem 0;
+  margin-top: 8rem;
+  transition: all 0.15s ease-in-out;
 }
 section.sidebar .container a.add i {
   margin-left: 2rem;
 }
 section.sidebar .container a.add:hover {
-  filter: brightness(0.9);
+  background-color: #1baf76;
+  color: #fff;
 }
 section.sidebar .container .menu {
   display: flex;
@@ -46,24 +56,30 @@ section.sidebar .container .menu .menu-item {
   color: #9294aa;
   padding: 1.6rem 1.6rem;
   border-radius: 1rem;
+  transition: all 0.15s ease-in-out;
 }
 section.sidebar .container .menu .menu-item i {
   margin-right: 3rem;
+  transition: all 0.15s ease-in-out;
 }
 section.sidebar .container .menu .menu-item:hover {
   background-color: #f4f4f9;
-  color: #1b181d;
+  color: #2e2e2e;
 }
 section.sidebar .container .menu .menu-item:hover i {
   color: #1baf76;
+}
+section.sidebar .container .menu .setting {
+  margin-top: 45rem;
 }
 
 section.nav {
   width: calc(100% - 300px);
   position: fixed;
   background-color: #fff;
-  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+  box-shadow: rgba(50, 50, 93, 0.05) 0px 2px 5px -1px, rgba(0, 0, 0, 0.1) 0px 1px 3px -1px;
   margin-left: 300px;
+  z-index: 10;
 }
 section.nav .container {
   z-index: 1;
@@ -71,6 +87,7 @@ section.nav .container {
   align-items: center;
   justify-content: space-between;
   padding: 2rem 0;
+  position: relative;
 }
 section.nav .container .search-box {
   background-color: #f4f4f9;
@@ -136,6 +153,29 @@ section.nav .container .nav-right .fa-angle-down:hover {
   background-color: #f4f4f9;
   cursor: pointer;
 }
+section.nav .container a.logout {
+  display: none;
+  position: absolute;
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: #9294aa;
+  padding: 1rem 1.6rem;
+  border-radius: 0.5rem;
+  right: 2.5%;
+  bottom: -20px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  background-color: #fff;
+}
+section.nav .container a.logout i {
+  margin-right: 1rem;
+}
+section.nav .container a.logout:hover {
+  background-color: #f4f4f9;
+  color: #2e2e2e;
+}
+section.nav .container a.logout:hover i {
+  color: #1baf76;
+}
 
 section.main_content {
   width: calc(100% - 300px);
@@ -144,7 +184,7 @@ section.main_content {
   padding-top: 15rem;
 }
 section.main_content .container {
-  width: 80%;
+  width: 90%;
   margin: 0 auto;
 }
 section.main_content .container table {
@@ -153,7 +193,7 @@ section.main_content .container table {
   text-align: left;
   background-color: #fff;
   border-radius: 1rem;
-  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   font-size: 1.6rem;
   color: #1baf76;
 }
@@ -179,6 +219,100 @@ section.main_content .container table tbody tr td img {
   width: 3.6rem;
   border-radius: 50%;
 }
+section.main_content .container .info_box {
+  z-index: -1;
+  display: flex;
+  justify-content: space-between;
+  gap: 8rem;
+  margin-bottom: 6rem;
+}
+section.main_content .container .info_box .info_single {
+  height: 14rem;
+  background-color: #fff;
+  width: 20%;
+  border-radius: 1rem;
+  box-shadow: rgba(50, 50, 93, 0.1) 0px 2px 5px -1px, rgba(0, 0, 0, 0.1) 0px 1px 3px -1px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+section.main_content .container .info_box .info_single .info-icon {
+  background-color: #f6ecff;
+  color: #9c4fdf;
+  font-size: 1.8rem;
+  border-radius: 50%;
+  height: 6rem;
+  aspect-ratio: 1/1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+section.main_content .container .info_box .info_single .info_text {
+  margin-right: 1.5rem;
+}
+section.main_content .container .info_box .info_single .info_text h1 {
+  font-size: 2rem;
+  color: #2e2e2e;
+  opacity: 0.9;
+}
+section.main_content .container .info_box .info_single .info_text p {
+  font-size: 1.4rem;
+  color: #9294aa;
+  font-weight: 500;
+}
+section.main_content .container .info_box .info2 .info-icon {
+  background-color: #ffecec;
+  color: #f14c4c;
+}
+section.main_content .container .info_box .info3 .info-icon {
+  background-color: #ecfff7;
+  color: #19ce89;
+}
+section.main_content .container .info_box .info4 .info-icon {
+  background-color: #ecfbff;
+  color: #34dbf1;
+}
+section.main_content .container .graphs {
+  display: flex;
+  gap: 8.5rem;
+}
+section.main_content .container .graphs .stats {
+  position: relative;
+  width: 50%;
+  background-color: #fff;
+  padding: 3rem;
+  border-radius: 1rem;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+section.main_content .container .graphs .stats h1 {
+  font-size: 1.6rem;
+  color: #2e2e2e;
+  font-weight: 600;
+  opacity: 0.8;
+  margin-bottom: 3rem;
+}
+section.main_content .container .graphs .stats #canvas {
+  height: 100%;
+}
+section.main_content .container .graphs .stats2 {
+  position: relative;
+  width: 50%;
+  background-color: #fff;
+  padding: 3rem;
+  border-radius: 1rem;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+section.main_content .container .graphs .stats2 h1 {
+  font-size: 1.6rem;
+  color: #2e2e2e;
+  font-weight: 600;
+  opacity: 0.8;
+  margin-bottom: 3rem;
+}
+section.main_content .container .graphs .stats2 #canvas {
+  height: 100%;
+}
 
 .user_active {
   background-color: #ecfff6;
@@ -197,7 +331,7 @@ section.main_content .container table tbody tr td img {
 }
 
 .menu-active {
-  color: #1b181d;
+  color: #2e2e2e !important;
 }
 .menu-active i {
   color: #1baf76;
