--- a/assets/sass/base/reset.scss
+++ b/assets/sass/base/reset.scss
@@ -5,7 +5,7 @@ html {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: "inter", sans-serif;
+	font-family: "poppins", sans-serif;
 }
 a {
 	text-decoration: none;
