--- a/assets/sass/layouts/__dashboard.scss
+++ b/assets/sass/layouts/__dashboard.scss
@@ -361,7 +361,7 @@ section.main_content {
 			z-index: -1;
 			display: flex;
 			justify-content: space-between;
-			gap: 8rem;
+			gap: 1%;
 			margin-bottom: 6rem;
 			.info_single {
 				height: 14rem;
