--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,3 +1,3 @@
-@import "./utils/colors.scss";
-@import "./base/reset.scss";
-@import "./layouts/dashboard.scss";
+@import "./utils/_colors.scss";
+@import "./base/_reset.scss";
+@import "./layouts/_dashboard";
