--- a/assets/sass/layouts/__dashboard.scss
+++ b/assets/sass/layouts/__dashboard.scss
@@ -6,458 +6,404 @@ $white: #fff;
 body {
 	background-color: $bg-color;
 }
-section.sidebar {
-	background-color: $white;
-	width: 300px;
-	height: 100vh;
-	position: fixed;
-	box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
-	.container {
-		margin-left: 50px;
-		margin-top: 40px;
-		margin-right: 50px;
-		display: flex;
-		flex-direction: column;
-		.logo {
-			text-transform: uppercase;
-			font-size: 2.4rem;
-			font-weight: 900;
-			color: $text-color;
-			span {
-				color: $sc-color;
-				font-weight: 300;
-			}
-		}
-		a.add {
-			font-size: 1.6rem;
-			font-weight: 500;
-			color: $icon-color;
-			//background-color: $sc-color;
-			box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-				rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-			text-align: center;
-			padding: 1.6rem;
-			border-radius: 1rem;
-			margin: 5rem 0;
-			margin-top: 8rem;
-			transition: all 0.15s ease-in-out;
-
-			i {
-				margin-left: 2rem;
-			}
-			&:hover {
-				background-color: $sc-color;
-				color: $white;
-			}
-		}
-		.menu {
+.content-wrapper{
+	display: flex;
+	section.sidebar {
+		background-color: $white;
+		width: 16%;
+		height: 100vh;
+		box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+		.container {
+			width: 80%;
+			margin: 0 auto;
+			margin-top: 2rem;
 			display: flex;
 			flex-direction: column;
-			gap: 0.5rem;
-			.menu-item {
+			.logo {
+				text-transform: uppercase;
+				font-size: 2.4rem;
+				font-weight: 900;
+				color: $text-color;
+				span {
+					color: $sc-color;
+					font-weight: 600;
+				}
+			}
+			a.add {
 				font-size: 1.6rem;
 				font-weight: 500;
 				color: $icon-color;
-				padding: 1.6rem 1.6rem;
-				border-radius: 1rem;
+				//background-color: $sc-color;
+				box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+					rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+				text-align: center;
+				padding: 1.6rem;
+				border-radius: .5rem;
+				margin: 5rem 0;
+				margin-top: 8rem;
 				transition: all 0.15s ease-in-out;
+	
 				i {
-					margin-right: 3rem;
-					transition: all 0.15s ease-in-out;
+					margin-left: 2rem;
 				}
 				&:hover {
-					background-color: $bg-color;
-					color: $text-color;
+					background-color: $sc-color;
+					color: $white;
+				}
+			}
+			.menu {
+				display: flex;
+				flex-direction: column;
+				gap: 0.5rem;
+				.menu-item {
+					font-size: 1.6rem;
+					font-weight: 500;
+					color: $icon-color;
+					padding: 1.6rem 1.6rem;
+					border-radius: .5rem;
+					transition: all 0.15s ease-in-out;
 					i {
-						color: $sc-color;
+						margin-right: 3rem;
+						transition: all 0.15s ease-in-out;
+					}
+					&:hover {
+						background-color: $bg-color;
+						color: $text-color;
+						i {
+							color: $sc-color;
+						}
 					}
 				}
-			}
-			.setting {
-				margin-top: 45rem;
+				.setting {
+					margin-top: 45rem;
+				}
 			}
 		}
 	}
-}
-section.nav {
-	width: calc(100% - 300px);
-	position: fixed;
-	background-color: $white;
-	box-shadow: rgba(50, 50, 93, 0.05) 0px 2px 5px -1px,
-		rgba(0, 0, 0, 0.1) 0px 1px 3px -1px;
-	margin-left: 300px;
-	z-index: 10;
-	.container {
-		z-index: 1;
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		padding: 2rem 0;
+	section.main-content{
 		position: relative;
-		.search-box {
-			background-color: $bg-color;
-			border-radius: 1px solid #000;
-			margin-left: 3rem;
-			padding: 1rem 1.6rem;
-			border-radius: 1rem;
-			i {
-				font-size: 1.6rem;
-				color: $icon-color;
-				opacity: 0.8;
-			}
-			input {
-				background-color: $bg-color;
-				padding: 0.5rem 1rem;
-				border: none;
-				outline: none;
-				font-size: 1.4rem;
-				color: $icon-color;
-				font-weight: 500;
-				&::placeholder {
-					font-size: 1.4rem;
-					color: $icon-color;
-					font-weight: 500;
-				}
-			}
-		}
-		.nav-right {
+		flex-grow: 1;
+		overflow: hidden;
+		section.nav {
+			position: fixed;
 			display: flex;
-			align-items: center;
-			margin-right: 3rem;
-			.fa-bell {
-				font-size: 2rem;
-				color: $icon-color;
-				opacity: 0.8;
-				margin-right: 2rem;
-
-				padding: 1rem 1.1rem;
-				border-radius: 50%;
-				&:hover {
-					background-color: $bg-color;
-					cursor: pointer;
-				}
-			}
-			a {
-				.profile {
-					width: 3.6rem;
-					border-radius: 50%;
-					margin-right: 1rem;
-				}
-			}
-			.text-sec {
-				font-size: 1.6rem;
-				font-weight: 500;
-				color: $icon-color;
-			}
-			.fa-angle-down {
-				font-size: 1.2rem;
-				opacity: 0.7;
-				margin-left: 1rem;
-				padding: 1rem 1.1rem;
-				border-radius: 50%;
-				&:hover {
-					background-color: $bg-color;
-					cursor: pointer;
-				}
-			}
-		}
-		a.logout {
-			display: none;
-			position: absolute;
-			font-size: 1.6rem;
-			font-weight: 500;
-			color: $icon-color;
-			padding: 1rem 1.6rem;
-			border-radius: 0.5rem;
-			right: 2.5%;
-			bottom: -20px;
-			box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-				rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+			width: 84%;
 			background-color: $white;
-			i {
-				margin-right: 1rem;
-			}
-			&:hover {
-				background-color: $bg-color;
-				color: $text-color;
-				i {
-					color: $sc-color;
-				}
-			}
-		}
-	}
-}
-section.main_content {
-	width: calc(100% - 300px);
-	height: 100vh;
-	margin-left: 300px;
-	padding-top: 15rem;
-	.container {
-		width: 90%;
-		margin: 0 auto;
-		table {
-			border-collapse: collapse;
-			width: 100%;
-			text-align: left;
-			background-color: $white;
-			border-radius: 1rem;
-			box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-				rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-			font-size: 1.6rem;
-			color: $sc-color;
-			thead {
-				font-size: 1.4rem;
-				th {
-					font-size: 1.2rem;
-					text-transform: uppercase;
-					font-weight: 400;
-					padding: 1.5rem 3rem;
-					border-bottom: 1px solid #9294aa3f;
-				}
-			}
-			tbody {
-				color: $icon-color;
-				tr {
-					td {
+			box-shadow: rgba(50, 50, 93, 0.05) 0px 2px 5px -1px,
+				rgba(0, 0, 0, 0.1) 0px 1px 3px -1px;
+			z-index: 10;
+			.container {
+				width: 93%;
+				margin: 0 auto;
+				display: flex;
+				align-items: center;
+				justify-content: space-between;
+				padding-block: 1rem;
+				.search-box {
+					width: 30%;
+					background-color: $bg-color;
+					padding: 1rem 1.6rem;
+					border-radius: .5rem;
+					i {
+						font-size: 1.6rem;
+						color: $icon-color;
+						opacity: 0.8;
+					}
+					input {
+						background-color: $bg-color;
+						padding: 0.5rem 1rem;
+						border: none;
+						outline: none;
 						font-size: 1.4rem;
-						padding: 0.8rem 3rem;
-						border-bottom: 1px solid #9294aa3f;
-						img {
+						color: $icon-color;
+						font-weight: 500;
+						&::placeholder {
+							font-size: 1.4rem;
+							color: $icon-color;
+							font-weight: 500;
+						}
+					}
+				}
+				.nav-right {
+					display: flex;
+					align-items: center;
+					.fa-bell {
+						font-size: 2rem;
+						color: $icon-color;
+						opacity: 0.8;
+						margin-right: 2rem;
+		
+						padding: 1rem 1.1rem;
+						border-radius: 50%;
+						&:hover {
+							background-color: $bg-color;
+							cursor: pointer;
+						}
+					}
+					a {
+						.profile {
 							width: 3.6rem;
 							border-radius: 50%;
+							margin-right: 1rem;
+						}
+					}
+					.text-sec {
+						font-size: 1.6rem;
+						font-weight: 500;
+						color: $icon-color;
+					}
+					.fa-angle-down {
+						font-size: 1.2rem;
+						opacity: 0.7;
+						margin-left: 1rem;
+						padding: 1rem 1.1rem;
+						border-radius: 50%;
+						&:hover {
+							background-color: $bg-color;
+							cursor: pointer;
+						}
+					}
+				}
+				a.logout {
+					display: none;
+					position: absolute;
+					font-size: 1.6rem;
+					font-weight: 500;
+					color: $icon-color;
+					padding: 1rem 1.6rem;
+					border-radius: 0.5rem;
+					right: 2.5%;
+					bottom: -20px;
+					box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+						rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+					background-color: $white;
+					i {
+						margin-right: 1rem;
+					}
+					&:hover {
+						background-color: $bg-color;
+						color: $text-color;
+						i {
+							color: $sc-color;
 						}
 					}
 				}
 			}
 		}
-		form {
-			background-color: $white;
-			border-radius: 1rem;
-			padding: 3rem;
-			width: 60%;
-			box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-				rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-			margin-bottom: 6rem;
-			.form_heading {
-				padding: 0 0 2rem 0;
-				font-size: 2rem;
-				color: $icon-color;
-				font-weight: 500;
-				text-align: center;
-			}
-			.form_section {
-				margin-bottom: 4rem;
-				.form_title {
-					font-size: 1.6rem;
-					font-weight: 400;
-					color: $sc-color;
-					margin-bottom: 2rem;
-				}
-				.input_group {
+		section.content-body {
+			width: 100%;
+			height: 100vh;
+			padding-top: 12rem;
+			overflow: scroll;
+			.container {
+				width: 93%;
+				margin: 0 auto;
+				table {
+					border-collapse: collapse;
 					width: 100%;
-					display: flex;
-					justify-content: space-between;
-					gap: 4rem;
-					.input_single {
-						width: 100%;
-						.input_title {
+					text-align: left;
+					background-color: $white;
+					border-radius: .5rem;
+					box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+						rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+					font-size: 1.6rem;
+					color: $sc-color;
+					thead {
+						font-size: 1.4rem;
+						th {
 							font-size: 1.2rem;
+							text-transform: uppercase;
 							font-weight: 400;
-							color: $icon-color;
-							margin-bottom: 0.5rem;
-						}
-						.input {
-							width: 100%;
-							border: none;
-							border-bottom: 1px solid $icon-color;
-							font-size: 1.4rem;
-							outline: none;
-							padding: 0 0 0.5rem 0rem;
-							font-weight: 500;
-							color: #363636;
-							&::placeholder {
-								font-weight: normal;
-							}
-						}
-						.select {
-							font-weight: normal;
-							color: #363636;
-							margin-top: 0.5rem;
-						}
-						.date {
-							&::-webkit-datetime-edit {
-								font-weight: normal;
-							}
+							padding: 1.5rem 3rem;
+							border-bottom: 1px solid #9294aa3f;
 						}
 					}
-					.file {
-						position: relative;
-						.input_title {
-							border-bottom: 1px solid $icon-color;
-							position: absolute;
-							padding: 0 10rem 0.5rem 0;
-							bottom: -5px;
-							font-size: 1.4rem;
-							margin-top: 1rem;
-							color: $text-color;
-							opacity: 0.8;
-							i {
-								padding-right: 1rem;
-							}
-						}
-						input {
-							display: none;
-							position: absolute;
-						}
-					}
-					.checkbox {
-						display: flex;
-						justify-content: center;
-						gap: 0.5rem;
-						text-align: left;
-						.input {
-							width: auto;
-						}
-					}
-					.input_radio {
-						.input_title {
-							margin-bottom: 0.5rem;
-							text-align: center;
-						}
-						.dataset {
-							display: flex;
-							gap: 1rem;
-							justify-content: center;
-							align-items: center;
-							margin-top: 1.5rem;
-							div {
-								margin-bottom: 0.5rem;
-
-								label {
-									font-size: 1.4rem;
-									color: $text-color;
+					tbody {
+						color: $icon-color;
+						tr {
+							td {
+								font-size: 1.4rem;
+								padding: 0.8rem 3rem;
+								border-bottom: 1px solid #9294aa3f;
+								img {
+									width: 3.6rem;
+									border-radius: 50%;
 								}
 							}
 						}
 					}
-
-					.small {
-						width: 40%;
-					}
 				}
-			}
-			.submit {
-				margin-left: 50%;
-				transform: translateX(-50%);
-				padding: 1rem 6rem;
-				border: 1px solid $sc-color;
-				border-radius: 0.5rem;
-				background-color: $sc-color;
-				color: #fff;
-				text-transform: uppercase;
-			}
-		}
-		.info_box {
-			z-index: -1;
-			display: flex;
-			justify-content: space-between;
-			gap: 1%;
-			margin-bottom: 6rem;
-			.info_single {
-				height: 14rem;
-				background-color: $white;
-				width: 20%;
-				border-radius: 1rem;
-				box-shadow: rgba(50, 50, 93, 0.1) 0px 2px 5px -1px,
-					rgba(0, 0, 0, 0.1) 0px 1px 3px -1px;
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				gap: 2rem;
-				.info-icon {
-					background-color: #f6ecff;
-					color: #9c4fdf;
-					font-size: 1.8rem;
-					border-radius: 50%;
-					height: 6rem;
-					aspect-ratio: 1/1;
-					display: flex;
-					justify-content: center;
-					align-items: center;
-				}
-				.info_text {
-					margin-right: 1.5rem;
-					h1 {
+				form {
+					background-color: $white;
+					border-radius: .5rem;
+					padding: 3rem;
+					width: 50%;
+					box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+						rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+					margin-bottom: 6rem;
+					.form_heading {
+						padding: 0 0 2rem 0;
 						font-size: 2rem;
-						color: $text-color;
-						opacity: 0.9;
-					}
-
-					p {
-						font-size: 1.4rem;
 						color: $icon-color;
 						font-weight: 500;
+						text-align: center;
+					}
+					.form_section {
+						margin-bottom: 4rem;
+						.form_title {
+							font-size: 1.6rem;
+							font-weight: 400;
+							color: $sc-color;
+							margin-bottom: 2rem;
+						}
+						.input_group {
+							margin-top: 4rem;
+							width: 100%;
+							display: flex;
+							justify-content: space-between;
+							gap: 4rem;
+							
+							
+							.checkbox {
+								display: flex;
+								justify-content: center;
+								gap: 0.5rem;
+								text-align: left;
+								.input {
+									width: auto;
+								}
+							}
+							.input_radio {
+								.input_title {
+									margin-bottom: 0.5rem;
+									text-align: center;
+								}
+								.dataset {
+									display: flex;
+									gap: 1rem;
+									justify-content: center;
+									align-items: center;
+									margin-top: 1.5rem;
+									div {
+										margin-bottom: 0.5rem;
+		
+										label {
+											font-size: 1.4rem;
+											color: $text-color;
+										}
+									}
+								}
+							}
+		
+							.small {
+								width: 40%;
+							}
+						}
 					}
 				}
-			}
-			.info2 {
-				.info-icon {
-					background-color: #ffecec;
-					color: #f14c4c;
+				.info_box {
+					z-index: -1;
+					display: flex;
+					justify-content: space-between;
+					gap: 2%;
+					margin-bottom: 6rem;
+					.info_single {
+						height: 14rem;
+						background-color: $white;
+						width: 20%;
+						border-radius: .5rem;
+						box-shadow: rgba(50, 50, 93, 0.1) 0px 2px 5px -1px,
+							rgba(0, 0, 0, 0.1) 0px 1px 3px -1px;
+						display: flex;
+						align-items: center;
+						justify-content: center;
+						gap: 2rem;
+						.info-icon {
+							background-color: #f6ecff;
+							color: #9c4fdf;
+							font-size: 1.8rem;
+							border-radius: 50%;
+							height: 6rem;
+							aspect-ratio: 1/1;
+							display: flex;
+							justify-content: center;
+							align-items: center;
+						}
+						.info_text {
+							margin-right: 1.5rem;
+							h1 {
+								font-size: 2rem;
+								color: $text-color;
+								opacity: 0.9;
+							}
+		
+							p {
+								font-size: 1.4rem;
+								color: $icon-color;
+								font-weight: 500;
+							}
+						}
+					}
+					.info2 {
+						.info-icon {
+							background-color: #ffecec;
+							color: #f14c4c;
+						}
+					}
+					.info3 {
+						.info-icon {
+							background-color: #ecfff7;
+							color: #19ce89;
+						}
+					}
+					.info4 {
+						.info-icon {
+							background-color: #ecfbff;
+							color: #34dbf1;
+						}
+					}
 				}
-			}
-			.info3 {
-				.info-icon {
-					background-color: #ecfff7;
-					color: #19ce89;
-				}
-			}
-			.info4 {
-				.info-icon {
-					background-color: #ecfbff;
-					color: #34dbf1;
-				}
-			}
-		}
-		.graphs {
-			display: flex;
-			gap: 8.5rem;
-			.stats {
-				position: relative;
-				width: 50%;
-				background-color: $white;
-				padding: 3rem;
-				border-radius: 1rem;
-				box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-					rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-				h1 {
-					font-size: 1.6rem;
-					color: $text-color;
-					font-weight: 600;
-					opacity: 0.8;
-					margin-bottom: 3rem;
-				}
-				#canvas {
-					height: 100%;
-				}
-			}
-			.stats2 {
-				position: relative;
-				width: 50%;
-				background-color: $white;
-				padding: 3rem;
-				border-radius: 1rem;
-				box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-					rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-				h1 {
-					font-size: 1.6rem;
-					color: $text-color;
-					font-weight: 600;
-					opacity: 0.8;
-					margin-bottom: 3rem;
-				}
-				#canvas {
-					height: 100%;
+				.graphs {
+					display: flex;
+					gap: 8.5rem;
+					.stats {
+						position: relative;
+						width: 50%;
+						background-color: $white;
+						padding: 3rem;
+						border-radius: .5rem;
+						box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+							rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+						h1 {
+							font-size: 1.6rem;
+							color: $text-color;
+							font-weight: 600;
+							opacity: 0.8;
+							margin-bottom: 3rem;
+						}
+						#canvas {
+							height: 100%;
+						}
+					}
+					.stats2 {
+						position: relative;
+						width: 50%;
+						background-color: $white;
+						padding: 3rem;
+						border-radius: .5rem;
+						box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+							rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+						h1 {
+							font-size: 1.6rem;
+							color: $text-color;
+							font-weight: 600;
+							opacity: 0.8;
+							margin-bottom: 3rem;
+						}
+						#canvas {
+							height: 100%;
+						}
+					}
 				}
 			}
 		}
@@ -483,6 +429,9 @@ section.main_content {
 		color: $sc-color;
 	}
 }
-input {
-	accent-color: rgb(62, 160, 91);
+
+.input-active{
+	transform: translateY(-2rem);
+	font-size: 1.2rem !important;
+	color: $sc-color !important;
 }
