--- a/assets/sass/utils/__colors.scss
+++ b/assets/sass/utils/__colors.scss
@@ -1,4 +1,6 @@
 $bg-color: #f4f4f9;
 $sc-color: #6ad196;
+$sc-color-hover: #48b979;
 $icon-color: #9294aa;
+$icon-color-fade: #9294aa81;
 $text-color: #1c1c1c;
